# tile-documents

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
src/: main.js  state.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: car.rs  lib.rs  main.rs
src/components/: tab-bar.js  tile-tab.js
