[package]
name = "tile-documents"
version = "0.1.0"
edition = "2021"

[lib]
name = "tile_documents_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
cid = "0.11"
ciborium = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
